Fix that the markdown hint are too close to the textarea on new thread

--- a/less/themes/pirat.less
+++ b/less/themes/pirat.less
@@ -259,6 +259,10 @@
 
 // Forms ======================================================================
 
+.DiscussionForm textarea {
+  margin-bottom: 10px;
+}
+
 .MessageForm {
   margin-left: 0;
 }
